[package]
name = "bls_on_arkworks"
description = "A rust crate implementing the latest IETF draft for BLS signatures on top of the Arkworks ecosystem"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ArnaudBrousseau/bls_on_arkworks"
readme = "README.md"
homepage = "https://github.com/ArnaudBrousseau/bls_on_arkworks"
keywords = ["cryptography", "BLS", "BLS12381", "ethereum", "signature"]
categories = ["cryptography", "no_std"]

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
libm = "0.2.7"

[dev-dependencies]
rand_core = {version = "0.6.4", features = ["getrandom"] }
hex = { version = "0.4.3" }
hex-literal = { version = "0.4.1" }
json = { version = "0.12.4" }
num-bigint = { version = "0.4.3" }

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-bls12-381/std",
    "ark-std/std",
    "ark-ec/std",
    "hmac/std",
    "sha2/std",
    "hkdf/std",
    "num-bigint/std",
    "ark-serialize/std",
]